--- a/media/phaseSwitcher.html
+++ b/media/phaseSwitcher.html
@@ -1,41 +1,76 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src ${webview.cspSource}; img-src ${webview.cspSource} https:; script-src 'nonce-${nonce}';">
+    <title>1C:Drive Test Helper</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src ${webview.cspSource}; font-src ${webview.cspSource}; img-src ${webview.cspSource} https:; script-src 'nonce-${nonce}';">
+    <link href="${codiconsUri}" rel="stylesheet">
     <link href="${stylesUri}" rel="stylesheet">
-    <title>Phase Switcher</title>
 </head>
 <body>
-    <h2>Phase Switcher</h2>
+    <div class="main-content-area">
+        <div class="phase-switcher-section">
+            <h1>Phase Switcher</h1>
 
-    <div class="selector-container">
-         <label for="phaseSelector">Фаза:</label>
-
-         <select id="phaseSelector" name="phases">
-             <option value="">Загрузка...</option>
-         </select>
-         <button class="controls-top" id="refreshBtn" title="Обновить состояние с диска">Обновить</button>
-
+            <div class="selector-container">
+                <label for="phaseSelector">Фаза:</label>
+                <select id="phaseSelector" name="phases">
+                    <option value="">Загрузка...</option>
+                </select>
+                <button class="controls-top button-with-icon" id="refreshBtn" title="Обновить состояние с диска">
+                    <span class="codicon codicon-refresh"></span>
+                </button>
+                <button class="controls-top button-with-icon" id="openSettingsBtn" title="Открыть настройки расширения">
+                    <span class="codicon codicon-settings-gear"></span>
+                </button>
+            </div>
+            <div id="checkbox-container">
+                <p>Загрузка тестов...</p>
+            </div>
+            <div class="phase-switcher-controls">
+                <div class="controls-row">
+                    <button id="selectAllBtn" class="button-with-icon">
+                        <span class="codicon codicon-check-all"></span>Переключить все
+                    </button>
+                    <button id="selectVisibleBtn" class="button-with-icon">
+                        <span class="codicon codicon-check"></span>Переключить фазу
+                    </button>
+                </div>
+                <div class="controls-row">
+                    <button id="selectDefaultsBtn" class="button-with-icon">
+                        <span class="codicon codicon-discard"></span>По умолчанию
+                    </button>
+                </div>
+                <div class="controls-row">
+                    <button id="applyChangesBtn" class="button-with-icon">
+                        <span class="codicon codicon-rocket"></span>Применить изменения
+                    </button>
+                </div>
+            </div>
+            <div id="statusBar" class="status-bar">Статус: Инициализация...</div>
+        </div>
+        <hr id="sectionSeparator" class="section-separator">
     </div>
-     <div id="checkbox-container">
-         <p>Загрузка тестов...</p>
-     </div>
-    <div class="controls">
-        <div class="controls-row">
-            <button id="selectAllBtn">Переключить все</button>
-            <button id="selectVisibleBtn">Переключить фазу</button>
+    <div id="assembleSection" class="assemble-tests-section">
+        <h1>Сборка Тестов</h1>
+        <div class="assemble-options assemble-options-inline">
+            Accounting:
+            <select id="recordGLSelect" name="recordGLAccounts" title="Record GL Accounts (0=No, 1=Yes, 2=Templates)">
+                <option value="0">GL-</option>
+                <option value="1" selected>GL+</option>
+                <option value="2">Templates</option>
+            </select>
+            <label class="setting-item drive-trade-label">
+                <input type="checkbox" id="driveTradeChk">
+                <span>DriveTrade</span> </label>
         </div>
-        <div class="controls-row">
-            <button id="selectDefaultsBtn">По умолчанию</button>
+        <div class="assemble-controls">
+             <button id="assembleTestsBtn" class="button-with-icon">
+                 <span class="codicon codicon-beaker"></span> Собрать тесты
+             </button>
         </div>
-        <div class="controls-row">
-            <button id="applyChangesBtn">Применить изменения</button>
+        <div id="assembleStatus" class="status-area">
         </div>
     </div>
-    <div id="statusBar" class="status-bar">Статус: Инициализация...</div>
-
     <script type="application/javascript" nonce="${nonce}" src="${scriptUri}"></script>
 </body>
-</html>
