new steps and templates by default

--- a/media/phaseSwitcher.html
+++ b/media/phaseSwitcher.html
@@ -72,8 +72,8 @@
                 Accounting:
                 <select id="recordGLSelect" name="recordGLAccounts" title="Record GL Accounts (0=No, 1=Yes, 2=Templates)">
                     <option value="0">GL-</option>
-                    <option value="1" selected>GL+</option>
-                    <option value="2">Templates</option>
+                    <option value="1">GL+</option>
+                    <option value="2" selected>Templates</option>
                 </select>
                 <label class="setting-item drive-trade-label">
                     <input type="checkbox" id="driveTradeChk">
