--- a/media/phaseSwitcher.html
+++ b/media/phaseSwitcher.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html lang="${localeHtmlLang}">
 <head>
-    <title>1C:Drive Test Helper</title>
+    <title>${extDisplayName}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src ${webview.cspSource}; font-src ${webview.cspSource}; img-src ${webview.cspSource} https:; script-src 'nonce-${nonce}';">
     <link href="${codiconsUri}" rel="stylesheet">
@@ -12,9 +12,9 @@
 
         <div class="phase-switcher-section">
             <div class="controls-top-bar">
-                 <h1>Phase Switcher</h1>
+                 <h1>${loc.phaseSwitcherTitle}</h1>
                  <div class="controls-top-buttons">
-                    <button class="button-with-icon compact-top-btn" id="openSettingsBtn" title="Открыть настройки расширения">
+                    <button class="button-with-icon compact-top-btn" id="openSettingsBtn" title="${loc.openSettingsTitle}">
                         <span class="codicon codicon-settings-gear"></span>
                     </button>
                 </div>
@@ -22,54 +22,54 @@
 
             <div class="global-list-actions">
                 <div class="dropdown-container">
-                    <button id="addScenarioDropdownBtn" class="button-with-icon compact-action-btn" title="Создать сценарий">
+                    <button id="addScenarioDropdownBtn" class="button-with-icon compact-action-btn" title="${loc.createScenarioTitle}">
                         <span class="codicon codicon-add"></span>
                     </button>
                     <div id="addScenarioDropdownContent" class="dropdown-content">
                         <a href="#" id="createMainScenarioFromDropdownBtn" class="dropdown-item">
-                            <span class="codicon codicon-code-oss"></span> Главный сценарий
+                            <span class="codicon codicon-code-oss"></span> ${loc.createMainScenario}
                         </a>
                         <a href="#" id="createNestedScenarioFromDropdownBtn" class="dropdown-item">
-                            <span class="codicon codicon-references"></span> Вложенный сценарий
+                            <span class="codicon codicon-references"></span> ${loc.createNestedScenario}
                         </a>
                     </div>
                 </div>
-                <button id="refreshBtn" class="button-with-icon compact-action-btn" title="Обновить состояние с диска">
+                <button id="refreshBtn" class="button-with-icon compact-action-btn" title="${loc.refreshTitle}">
                     <span class="codicon codicon-refresh"></span>
                 </button>
-                <button id="collapseAllBtn" class="button-with-icon compact-action-btn" title="Свернуть/Развернуть все фазы">
+                <button id="collapseAllBtn" class="button-with-icon compact-action-btn" title="${loc.collapseExpandAllTitle}">
                     <span class="codicon codicon-list-tree"></span>
                 </button>
-                <button id="selectAllBtn" class="button-with-icon compact-action-btn" title="Переключить состояние всех чекбоксов">
+                <button id="selectAllBtn" class="button-with-icon compact-action-btn" title="${loc.toggleAllCheckboxesTitle}">
                     <span class="codicon codicon-checklist"></span>
                 </button>
             </div>
 
             <div id="phaseTreeContainer" class="phase-tree-container">
-                <p>Загрузка фаз и тестов...</p>
+                <p>${loc.loadingPhasesAndTests}</p>
             </div>
 
             <div class="phase-switcher-controls-fixed-bottom">
                 <div class="phase-switcher-controls">
                     <div class="controls-row">
                         <button id="selectDefaultsBtn" class="button-with-icon">
-                            <span class="codicon codicon-discard"></span>По умолчанию
+                            <span class="codicon codicon-discard"></span>${loc.defaults}
                         </button>
                         <button id="applyChangesBtn" class="button-with-icon">
-                            <span class="codicon codicon-rocket"></span>Применить
+                            <span class="codicon codicon-rocket"></span>${loc.apply}
                         </button>
                     </div>
                 </div>
-                <div id="statusBar" class="status-bar">Статус: Инициализация...</div>
+                <div id="statusBar" class="status-bar">${loc.statusInit}</div>
             </div>
         </div>
 
         <hr id="sectionSeparator" class="section-separator">
         
         <div id="assembleSection" class="assemble-tests-section">
-            <h1>Сборка</h1>
+            <h1>${loc.assemblyTitle}</h1>
             <div class="assemble-options assemble-options-inline">
-                Accounting mode:
+                ${loc.accountingMode}:
                 <select id="recordGLSelect" name="recordGLAccounts" title="Record GL Accounts (0=No, 1=Yes, 2=Templates)">
                     <option value="0">GL-</option>
                     <option value="1">GL+</option>
@@ -78,11 +78,11 @@
             </div>
             <div class="assemble-controls">
                 <div class="controls-row">
-                    <button id="createFirstLaunchBtn" class="button-with-icon" title="Собрать архив FirstLaunch">
-                        <span class="codicon codicon-file-zip"></span> Собрать FL
+                    <button id="createFirstLaunchBtn" class="button-with-icon" title="${loc.createFirstLaunchZipTitle}">
+                        <span class="codicon codicon-file-zip"></span> ${loc.buildFL}
                     </button>
                     <button id="assembleTestsBtn" class="button-with-icon">
-                        <span class="codicon codicon-beaker"></span> Собрать тесты
+                        <span class="codicon codicon-beaker"></span> ${loc.buildTests}
                     </button>
                 </div>
             </div>
@@ -90,6 +90,7 @@
             </div>
         </div>
     </div>
+    <script type="application/javascript" nonce="${nonce}">window.__loc = ${webviewLoc};</script>
     <script type="application/javascript" nonce="${nonce}" src="${scriptUri}"></script>
 </body>
 </html>
