--- a/media/phaseSwitcher.html
+++ b/media/phaseSwitcher.html
@@ -90,7 +90,7 @@
             </div>
         </div>
     </div>
-    <script type="application/javascript" nonce="${nonce}">window.__loc = ${webviewLoc};</script>
+    <script type="application/javascript" nonce="${nonce}">window.__loc = "${webviewLoc}";</script>
     <script type="application/javascript" nonce="${nonce}" src="${scriptUri}"></script>
 </body>
 </html>
